fixed white space issue when collapsing stats page

--- a/public/assets/css/stats.css
+++ b/public/assets/css/stats.css
@@ -5,20 +5,25 @@ body {
 }
 canvas {
   display: block;
-  /* vertical-align: bottom; */
+  vertical-align: bottom;
 }
 /* ---- particles.js container ---- */
 #particles-js {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  height: 130%;
+  height: 100%;
   background-color: #273742;
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  background-attachment: fixed;
   z-index: -10;
-  filter: blur(2px);
+  /* background: url("") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
 }
 .header {
   background: #142531;
@@ -28,9 +33,9 @@ canvas {
 #graphDiv,
 #jobsAppliedDiv {
   display: inline-block;
-  height: 30%;
-  width: 50%;
-  margin-top: 2rem;
+  height: 30rem;
+  width: 50rem;
+  margin: 2rem;
 }
 
 .graph-container {
